Add various optimizations
Add descriptions, css for mobile, img lazy loading, mathjax script conditional loading, etc.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,15 +1,15 @@
-<link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet"/>
-<link href="/assets/scripts/zeynep/zeynep.min.css" rel="stylesheet"/>
-<link href="/assets/css/zeynep/base.css" rel="stylesheet"/>
-<link href="/assets/css/zeynep/left.css" rel="stylesheet"/>
+<link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet"/>
+<link href="assets/scripts/zeynep/zeynep.min.css" rel="stylesheet"/>
+<link href="assets/css/zeynep/base.css" rel="stylesheet"/>
+<link href="assets/css/zeynep/left.css" rel="stylesheet"/>
 
 <div class="navbar">
   <div style="top: 0; position: fixed; height: 50px; width: 100%;">
-    <a href="https://www.instagram.com/mathematikos_sk/" target="_blank"><img src="../assets/images/homepage/Instagram_Glyph_Black.png" alt="Instagram" style="max-height:80%; max-width:100%; float: right; margin: 5px 6px;"></a>
+    <a href="https://www.instagram.com/mathematikos_sk/" target="_blank"><img src="assets/images/homepage/Instagram_Glyph_Black.png" alt="Instagram" style="max-height:80%; max-width:100%; float: right; margin: 5px 6px;"></a>
 	<!--<p style="text-align:center;"><a href="https://www.instagram.com/mathematikos_sk/" style="float: right; margin: 0 6px;">Visit Instagram</a></p>-->
   </div>
   <button type="button" class="btn-open first" aria-label="menu">
-	<img src="../assets/images/homepage/menu.png" alt="menu">
+	<img src="assets/images/homepage/menu.png" alt="Menu">
   </button>
 </div>
 
@@ -45,7 +45,7 @@
 <div class="zeynep-overlay"></div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="/assets/scripts/zeynep/zeynep.min.js"></script>
+<script src="assets/scripts/zeynep/zeynep.min.js"></script>
 
 <script>
   $(function() {
