--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,12 @@
 
 {%- assign styles = "nav_styles, carusel_styles, styles" | split: ", " %}
 {% for style in styles %}
-<link rel="stylesheet" type="text/css" href="/assets/css/{{ style }}.css">
+<link rel="stylesheet" type="text/css" href="assets/css/{{ style }}.css">
 {%- endfor %}
 
 {% seo title=false %}
 
+{%- if page.mathjax %}
 <!-- include library for display math equations -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script>
@@ -28,6 +29,7 @@ MathJax = {
 <script id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3.2/es5/tex-chtml.js">
 </script>
+{% endif %}
 </head>
 <body>
 {% include navigation.html %}
