--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 <!--<meta name="author" content="{{ site.author }}">-->
 
 <title>{{ page.title }}</title>
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 {%- assign styles = "nav_styles, styles" | split: ", " %}
 {% for style in styles %}
