Add quadratic function

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,6 +104,11 @@ h3 {
 	height: auto;
 }
 
+.homework{
+	background-color: #dce9f5;
+	padding: 2%;
+}
+
 .literature {
 	overflow-wrap: break-word;
 }
