Add GoatCounter analytics
No tracking of personal data.
Open source privacy-friendly alternative to Google Analytics.

Also, gitignore Gemfile.lock - it is ignored by github pages build.

Additionally, polyfill.js script is removed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
 {%- if page.mathjax %}
 <!-- include library for display math equations -->
-<script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
+<!--<script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>-->
 <script>
 MathJax = {
   tex: {
@@ -48,5 +48,7 @@ Môžeš tak urobiť prostredníctvom <b><a href="https://forms.gle/RkKkeaZHCgeW
 Ďakujeme a prajeme ti pekný deň :)
 </div>
 </footer>
+<script data-goatcounter="https://mathematikos.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
