Change goatcounter domain to mathematikos.sk

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ Môžeš tak urobiť prostredníctvom <b><a href="https://forms.gle/RkKkeaZHCgeW
 Ďakujeme a prajeme ti pekný deň :)
 </div>
 </footer>
-<script data-goatcounter="https://mathematikos.goatcounter.com/count"
+<script data-goatcounter="https://stats.mathematikos.sk/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
